[gd_scene load_steps=17 format=3 uid="uid://bnbvllenwohvr"]

[ext_resource type="Texture2D" uid="uid://bx2oh5f7b5oxv" path="res://Assets/Sprites/Objects/basic_tomato.png" id="1_u5jlk"]
[ext_resource type="Script" path="res://Scenes/System/reverse_scene.gd" id="1_xmgko"]
[ext_resource type="Texture2D" uid="uid://dicvy72ypj72r" path="res://Assets/Sprites/Other/reverse_arrows.png" id="3_fcn36"]
[ext_resource type="FontFile" uid="uid://cavcnqogulm5c" path="res://Assets/Fonts/m5x7.ttf" id="4_uuq03"]
[ext_resource type="Texture2D" uid="uid://d1rl3ihnx74oq" path="res://Assets/Sprites/UI/retry_button.png" id="5_q3gx2"]
[ext_resource type="Texture2D" uid="uid://w2656ev3cbpq" path="res://Assets/Sprites/UI/retry_button_hovered.png" id="6_jsk6t"]

[sub_resource type="Animation" id="Animation_jatkf"]
resource_name = "swap"
length = 1.00001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ObjectA:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(450, -0.25, 0, 0.25, 0, 320, -0.1, 68, 0.1, -62, 190, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectA:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(160, -0.25, 0, 0.25, 0, 120, -0.25, 0, 0.25, 0, 160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectB:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(190, -0.25, 0, 0.25, 0, 320, -0.1, -63, 0.1, 71, 450, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ObjectB:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(160, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0, 160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_qhx2s"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ObjectA:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(450, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ObjectA:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ObjectB:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(190, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ObjectB:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fbrun"]
_data = {
"RESET": SubResource("Animation_qhx2s"),
"swap": SubResource("Animation_jatkf")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s5b40"]
texture = ExtResource("5_q3gx2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0rh6v"]
texture = ExtResource("6_jsk6t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mvt6y"]
texture = ExtResource("6_jsk6t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p8pne"]
texture = ExtResource("5_q3gx2")

[sub_resource type="Animation" id="Animation_2bubj"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_up1ss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ic4y"]
_data = {
"RESET": SubResource("Animation_up1ss"),
"fade_in": SubResource("Animation_2bubj")
}

[node name="ReverseScene" type="Node2D"]
script = ExtResource("1_xmgko")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.129412, 0.129412, 0.137255, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fbrun")
}

[node name="Arrows" type="Sprite2D" parent="."]
position = Vector2(320, 153)
scale = Vector2(3, 3)
texture = ExtResource("3_fcn36")

[node name="ObjectA" type="Sprite2D" parent="."]
position = Vector2(450, 160)
scale = Vector2(3, 3)
texture = ExtResource("1_u5jlk")

[node name="ObjectB" type="Sprite2D" parent="."]
position = Vector2(190, 160)
scale = Vector2(3, 3)
texture = ExtResource("1_u5jlk")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 279.0
offset_top = 289.0
offset_right = 361.0
offset_bottom = 331.0
focus_mode = 0
theme_override_fonts/font = ExtResource("4_uuq03")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_s5b40")
theme_override_styles/hover = SubResource("StyleBoxTexture_0rh6v")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mvt6y")
theme_override_styles/disabled = SubResource("StyleBoxTexture_p8pne")
disabled = true
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
libraries = {
"": SubResource("AnimationLibrary_6ic4y")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
